/*
 * CHANGELOG.
 */

03152007 - Bunch of work on Unicode...added case-folding stricmp, removed
           platform-specific stricmp implementations, changed appropriate
           calls to an ASCII-only stricmp that ignores locale. Fixed case on
           UTF-8 API entry points.
03142007 - Dropped classic Mac OS support. It's just too hard to find a working
           Mac OS 9 install and reasonable development tools, so it's not
           worth it. If you still target OS 8 or 9, please use PhysicsFS 1.0.
03112007 - Removed zlib_license_change.txt ... it's in Subversion and the 1.0
           branch for history's sake. Added shared and static build options
           to CMakeLists.txt, and the expected "make install" target.
           Renamed some FILENAME files to FILENAME.txt, removed physfs.rc.
           Now compiles everything whether we need it or not, removing whole
           files with #ifdefs...this will make it easier to "embed" this
           library in other projects or use a different build system: just
           push everything through the compiler with preprocessor defines for
           the parts you want/need...platform modules are determined
           automatically without the build system needing to intervene, so you
           just have to #define the archivers, etc that you want.
           Updated makeos2.cmd for newer Innotek toolchain (thanks, Dave!)
03082007 - Fixed a comment in physfs.h. Renamed win32.c to windows.c.
           Cleaned up whitespace/formatting in pocketpc.c. Updated PocketPC
           code to expect UTF-8 strings from the higher level. Changed
           PHYSFS_SUPPORTS_LZMA to PHYSFS_SUPPORTS_7Z. Killed some #ifdefs
           in physfs.c. Moved to CMake...so long, autotools! Killed MIX
           archiver, too.
11052006 - More 7zip archiver work (thanks, Dennis!). Initial Unicode work.
           Minor BeOS realpath tweak.
09272006 - Reworked 7zip archiver (thanks, Dennis!).